# crowd-scenario

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW_RECOMMENDATIONS.md  HANDOFF.md  LICENSE  PUBLISHING.md  README.md  README.zh-TW.md  pyproject.toml
.beacon/: BACKLOG.md  CURRENT.md  PLAN.md
.beacon/done/part-001/: part-001-done-todo.md  part-001-slice-001-done-current.md  part-001-slice-002-done-current.md  verification-report.md
.beacon/done/part-002/: part-002-slice-001-done-current.md  verification-report.md
.beacon/done/part-003/: part-003-done-todo.md  part-003-slice-001-done-current.md  verification-report.md
.beacon/done/part-004/: part-004-slice-001-done-current.md  verification-report.md
.beacon/done/part-005/: part-005-done-todo.md  part-005-slice-001-done-current.md  verification-report.md
.beacon/parts/part-001/: DESIGN.md
.beacon/verification/: manifest.json
agent/: AGENTS.md  SOUL.md
case_studies/: README.md  __init__.py  case_a_etf_discount.md  case_b_price_hike.md  case_c_premium_chase.md  cases.py  report.py  runner.py
examples/: real_data.py
references/: firewall.md  personas.md
src/crowdscenario/: __init__.py  __main__.py  cli.py  composer.py  contracts.py  engine.py  seed.py
tests/: test_case_studies.py  test_cli.py  test_composer.py  test_consensus_eval.py  test_contracts.py  test_engine.py  test_examples.py  test_firewall_adversarial.py  test_improvements.py  test_narrator.py  test_properties.py  test_report.py  test_seed.py
tests/firewall_corpus/: must_allow.txt  must_reject.txt
tools/: eval_consensus.py  report.py
(+65 files in other folders)
